BTC Track v1.3.7.BackgroundRefresh.4

--- a/btc/index.html
+++ b/btc/index.html
@@ -1852,7 +1852,7 @@
                         console.log('[SW Update] User clicked "Update" button.');
                         userInitiatedUpdate = true; 
                         worker.postMessage({ action: 'skipWaiting' });
-                        updateNotificationEl.style.display = 'none'; 
+                        // updateNotificationEl.style.display = 'none'; // Panel will disappear on page reload
                     };
                 } else {
                     console.warn('[SW Update] Could not display update prompt: UI elements missing.');
