--- a/btc/index.html
+++ b/btc/index.html
@@ -303,14 +303,6 @@
             flex-shrink: 0;      /* Prevent label from shrinking */
         }
 
-        #backgroundSyncStatusText {
-            display: none; /* Hidden by default */
-            font-size: 0.8em;
-            color: #ffcc00; /* A warning-like color, adjust as needed */
-            margin-top: -5px; /* Negative margin to pull it closer to the input above */
-            margin-bottom: 10px; /* Space before the next element */
-        }
-
         .modal-content .config-item-row select,
         .modal-content .config-item-row input[type="text"], /* If other inputs were to use this row layout */
         .modal-content .config-item-row input[type="number"] {
@@ -531,7 +523,6 @@
             <h2 id="configModalTitle">Configuration</h2>
             <label for="apiKey">LiveCoinWatch API Key:</label>
             <input type="text" id="apiKey" placeholder="Enter your API Key">
-            <small id="backgroundSyncStatusText"></small> <!-- Element to show background sync status -->
 
             <label for="userBtcAmount">My BTC Amount (Optional):</label>
             <input type="number" id="userBtcAmount" placeholder="e.g., 0.5" step="any">
@@ -583,8 +574,7 @@
         const HISTORICAL_WINDOW_MINUTES = 5;
         const DATA_CACHE_DURATION_MS = 10 * 60 * 1000; // 10 minutes
 
-        // Constants for Service Worker API data cache and IndexedDB
-        const API_DATA_CACHE_NAME = 'btc-api-data-v1'; // Must match sw.js
+        // Constants for IndexedDB
         const API_KEY_DB_NAME = 'btcAppDB';            // Must match sw.js
         const APP_DATA_STORE_NAME = 'appDataStore';    // Renamed for clarity, was appConfigStore
         const CONFIG_IDB_KEY = 'appConfig';            // Key for the main config object
@@ -925,38 +915,6 @@
             }
         }
 
-        async function updateBackgroundSyncStatusInModal() {
-            const statusTextEl = document.getElementById('backgroundSyncStatusText');
-            if (!statusTextEl) return;
-
-            if (!('serviceWorker' in navigator) || !navigator.serviceWorker.ready) {
-                statusTextEl.textContent = 'Background updates not supported (Service Worker unavailable).';
-                statusTextEl.style.display = 'block';
-                return;
-            }
-
-            try {
-                const registration = await navigator.serviceWorker.ready;
-                if (!('periodicSync' in registration)) {
-                    statusTextEl.textContent = 'Background updates not supported by your browser.';
-                    statusTextEl.style.display = 'block';
-                    return;
-                }
-
-                const status = await navigator.permissions.query({ name: 'periodic-background-sync' });
-                if (status.state === 'denied') {
-                    statusTextEl.textContent = 'Background Updates Not Allowed. Please check site settings.';
-                    statusTextEl.style.display = 'block';
-                } else {
-                    statusTextEl.style.display = 'none'; // Hide if granted or prompt
-                }
-            } catch (error) {
-                console.warn('[Background Sync] Error checking permission status for modal:', error);
-                statusTextEl.textContent = 'Could not determine background update status.'; // Fallback message
-                statusTextEl.style.display = 'block';
-            }
-        }
-
         function toggleConfigModal(show) {
             configModalEl.style.display = show ? 'flex' : 'none';
             if (show) { // Populate inputs when showing
@@ -965,7 +923,6 @@
                 userTotalCostInput.value = config.userTotalCost || '';
                 googleApiKeyInput.value = config.googleApiKey || '';
                 accentColorPickerEl.value = config.accentColor || DEFAULT_ACCENT_COLOR;
-                updateBackgroundSyncStatusInModal(); // Update the status text when modal is shown
             }
         }
 
@@ -1251,43 +1208,6 @@
             return historyStartMs;
         }
 
-        async function registerPeriodicDataSync() {
-            const registration = await navigator.serviceWorker.ready;
-            if (!registration || !('periodicSync' in registration)) {
-                console.log('Periodic Background Sync not supported.');
-                return; // Exit if feature not supported
-            }
-
-            const status = await navigator.permissions.query({name: 'periodic-background-sync'});
-            if (status.state === 'granted') {
-                try {
-                    const tags = await registration.periodicSync.getTags();
-                    if (tags.includes('btc-data-update')) {
-                        console.log('Periodic sync "btc-data-update" already registered.');
-                        return;
-                    }
-                    await registration.periodicSync.register('btc-data-update', {
-                        minInterval: 20 * 60 * 1000, // 20 minutes
-                    });
-                    console.log('Periodic sync "btc-data-update" registered successfully.');
-                } catch (error) {
-                    console.error('Periodic sync registration failed (granted state):', error);
-                    setStatus('Could not set up background updates.', 'error');
-                }
-            } else if (status.state === 'prompt') {
-                console.log('Permission for Periodic Background Sync is "prompt". Attempting to register, browser should ask for permission.');
-                // Attempting to register will trigger the browser's permission prompt.
-                // No specific UI from our side here, browser handles it.
-                // We can re-check status after a short delay or on next load if needed, but typically not required.
-                await registration.periodicSync.register('btc-data-update', { minInterval: 20 * 60 * 1000 });
-            } else {
-                console.log('Permission for Periodic Background Sync not granted. Status:', status.state);
-                setStatus('Background updates disabled. Please enable "Background Sync" in site settings for automatic updates.', 'error');
-            }
-            // Ensure modal message is updated after any attempt or check
-            await updateBackgroundSyncStatusInModal();
-        }
-
 
         async function fetchData(forceRefresh = false) {
             if (!config.apiKey) {
@@ -1296,28 +1216,6 @@
                 return;
             }
             
-            if (!forceRefresh) {
-                try {
-                    const cache = await caches.open(API_DATA_CACHE_NAME);
-                    const cachedResponse = await cache.match('/api/btc/current-data'); 
-                    if (cachedResponse) {
-                        const backgroundFetchedData = await cachedResponse.json();
-                        const backgroundFetchTimeHeader = cachedResponse.headers.get('date');
-                        const backgroundFetchTime = backgroundFetchTimeHeader ? new Date(backgroundFetchTimeHeader).getTime() : Date.now();
-
-                        if (backgroundFetchedData && backgroundFetchedData.rate &&
-                            (!config.lastFetchedCurrentDataTimestamp || backgroundFetchTime > config.lastFetchedCurrentDataTimestamp) &&
-                            (Date.now() - backgroundFetchTime < DATA_CACHE_DURATION_MS)) { 
-                            console.log('[DEBUG] Using current data from background sync cache. Timestamp:', new Date(backgroundFetchTime).toISOString());
-                            _current_data_cache = backgroundFetchedData;
-                            config.lastFetchedCurrentDataTimestamp = backgroundFetchTime; 
-                        }
-                    }
-                } catch (err) {
-                    console.warn('[DEBUG] Error accessing background sync cache:', err);
-                }
-            }
-
             if (!forceRefresh && _current_data_cache && config.lastFetchedCurrentDataTimestamp &&
                 (Date.now() - config.lastFetchedCurrentDataTimestamp < DATA_CACHE_DURATION_MS)) {
                 const selectedChartCache = config.cachedChartData[config.selectedTimeframe];
@@ -1573,9 +1471,6 @@
                 config.cachedChartData = {};
                 await saveAppData(); 
             }
-            if (config.apiKey && navigator.serviceWorker.controller) {
-                registerPeriodicDataSync();
-            }
         });
         timeframeSelectEl.addEventListener('change', async (event) => {
             config.selectedTimeframe = event.target.value;
@@ -1828,11 +1723,6 @@
 
                 // Always fetch fresh data in the background to update
                 fetchData();
-
-                if (config.apiKey && navigator.serviceWorker.controller) { 
-                    
-                    registerPeriodicDataSync();
-                }
             }
             updateLastUpdatedMessage(); 
             if (updateTimestampInterval) clearInterval(updateTimestampInterval); 
