--- a/nfo/index.html
+++ b/nfo/index.html
@@ -29,6 +29,7 @@
             <button id="btnLocationsConfig" disabled>🌎 Locations</button>
             <button id="btnInfoCollectionConfig" disabled>🛠 Structure</button>
             <button id="btnAppConfig">⚙ App</button>
+            <button id="btnAppUpdate" class="hidden">⬆️ Update</button> <!-- New Update Button -->
         </section>
     </div>
 
