nfo2go v.2 Updated Update Button for Updating.10

--- a/nfo/index.html
+++ b/nfo/index.html
@@ -26,10 +26,10 @@
 
         <section id="configurationSection">
             <h2>Configuration</h2>
+            <button id="btnAppUpdate" class="hidden">✨ Update</button> <!-- New Update Button -->
             <button id="btnLocationsConfig" disabled>🌎 Locations</button>
             <button id="btnInfoCollectionConfig" disabled>🛠 Structure</button>
             <button id="btnAppConfig">⚙ App</button>
-            <button id="btnAppUpdate" class="hidden">🛠 Update</button> <!-- New Update Button -->
         </section>
     </div>
 
