nfo2go v.2 Weather Refresh for Info Modal.2

--- a/nfo/index.html
+++ b/nfo/index.html
@@ -26,7 +26,7 @@
 
         <section id="configurationSection">
             <h2>Configuration</h2>
-            <button id="btnAppUpdate" class="hidden">✨ Update</button> <!-- New Update Button -->
+            <button id="btnAppUpdate" class="hidden">⬆✨ Update</button> <!-- New Update Button -->
             <button id="btnLocationsConfig" disabled>🌎 Locations</button>
             <button id="btnInfoCollectionConfig" disabled>🛠 Structure</button>
             <button id="btnAppConfig">⚙ App</button>
