--- a/index.html
+++ b/index.html
@@ -133,6 +133,36 @@
                         </a>
                     </td>
                 </tr>
+                <tr class="project-row" onclick="window.location.href='./nfo/';">
+                    <td class="project-image-cell">
+                        <a href="./nfo/" tabindex="-1">
+                            <img src="./images/nfo.png" alt="nfo2go Icon Image">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./nfo/" tabindex="-1">
+                            <div>
+                                <h2>nfo2go v.2</h2>
+                                <p><b>nfo2Go:</b> Personal AI info hub. Now with weather support. <br><strong>Use:</strong> <br>1. App Config: Add Gemini API Key (get one free from Google AI Studio, link in app) &amp; set your theme colors. <br>2. Manage Info Locations: Add (e.g., 'Home' for 'Portland, OR'). Also drag to re-order. <br>3. Info Structure: Add topics &amp; AI queries (e.g., 🌤️Weather:'Current Weather conditions with 3 day forecast'). To build a personalised info source.<br>4. Click location to view; data retained for offline use.</p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
+                <tr class="project-row" onclick="window.location.href='./btc/';">
+                    <td class="project-image-cell">
+                        <a href="./btc/" tabindex="-1">
+                            <img src="./images/btc.png" alt="Bitcoin Track Icon Image">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./btc/" tabindex="-1">
+                            <div>
+                                <h2>BTC Track v1.4</h2>
+                                <p><b>BTC Track:</b> Simple PWA Enabled app to track Bitcoin, includes portfolio monitoring and AI Insights. <br><strong>Use:</strong> <br>1. Set LiveCoinWatch API, free link in app 2. (Optional) Set Your BTC Amount and Cost 3. (Optional) Set: Gemini API Key (free link in app) it enable AI insights.</p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
                 <tr class="project-row" onclick="window.location.href='./gene/';">
                     <td class="project-image-cell">
                         <a href="./gene/" tabindex="-1">
@@ -174,21 +204,6 @@
                             <div>
                                 <h2>SpiroGen</h2>
                                 <p><b>SpiroGen v2.4:</b> Create art with up to 4 nodes, pan/zoom, persistent traces of varying width and opacity, Node 1 fixed mode & starting angle (with math support for precision), Total Rotations, PWA support, Memory, and PNG download.</p>
-                            </div>
-                        </a>
-                    </td>
-                </tr>
-                <tr class="project-row" onclick="window.location.href='./nfo/';">
-                    <td class="project-image-cell">
-                        <a href="./nfo/" tabindex="-1">
-                            <img src="./images/nfo.png" alt="nfo2go Icon Image">
-                        </a>
-                    </td>
-                    <td class="project-text-cell">
-                        <a href="./nfo/" tabindex="-1">
-                            <div>
-                                <h2>nfo2go v.2</h2>
-                                <p><b>nfo2Go:</b> Personal AI info hub. Now with weather support. <br><strong>Use:</strong> <br>1. App Config: Add Gemini API Key (get one free from Google AI Studio, link in app) &amp; set your theme colors. <br>2. Manage Info Locations: Add (e.g., 'Home' for 'Portland, OR'). Also drag to re-order. <br>3. Info Structure: Add topics &amp; AI queries (e.g., 🌤️Weather:'Current Weather conditions with 3 day forecast'). To build a personalised info source.<br>4. Click location to view; data retained for offline use.</p>
                             </div>
                         </a>
                     </td>
