BTC Track v1.4 Publish.2

--- a/btc/index.html
+++ b/btc/index.html
@@ -326,7 +326,7 @@
         .modal-content input[type="password"],
         .modal-content input[type="color"],
         .modal-content select { /* General styling for select elements in modal */
-            width: calc(100% - 20px);
+            width: 100%;
             padding: 10px;
             margin-bottom: 10px;
             border: 1px solid #444;
