--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <a href="./btc/" tabindex="-1">
                             <div>
                                 <h2>BTC Track v1.4</h2>
-                                <p><b>BTC Track:</b> Simple PWA Enabled app to track Bitcoin, includes portfolio monitoring and AI Insights. <br><strong>Use:</strong> <br>1. Set LiveCoinWatch API, free link in app 2. (Optional) Set Your BTC Amount and Cost 3. (Optional) Set: Gemini API Key (free link in app) it enable AI insights.</p>
+                                <p><b>BTC Track:</b> Simple PWA Enabled app to track Bitcoin, includes portfolio monitoring and AI Insights. <br><strong>Use:</strong> <br>1. Set LiveCoinWatch API, free link in app <br>2. (Optional) Set Your BTC Amount and Cost <br>3. (Optional) Set: Gemini API Key (free link in app) it enable AI insights.</p>
                             </div>
                         </a>
                     </td>
