--- a/btc/index.html
+++ b/btc/index.html
@@ -1662,6 +1662,12 @@
             debouncedValidateGoogleKey(e.target.value.trim());
         });
 
+        // Show/hide API keys on focus/blur for easier editing
+        apiKeyInput.addEventListener('focus', (e) => { e.target.type = 'text'; });
+        apiKeyInput.addEventListener('blur', (e) => { e.target.type = 'password'; });
+
+        googleApiKeyInput.addEventListener('focus', (e) => { e.target.type = 'text'; });
+        googleApiKeyInput.addEventListener('blur', (e) => { e.target.type = 'password'; });
 
         function drawPriceChart(history, timeframe, allTimeHighUSD, accentColor) {
             if (!priceChartCanvas) return;
