--- a/spiro/index.html
+++ b/spiro/index.html
@@ -780,9 +780,25 @@
                 } else if (isSecondNode) {
                     nodeLength = Math.floor(Math.random() * (150 - 25 + 1)) + 25; // Random length 25-150
                     const randomInt = Math.floor(Math.random() * 13) - 6; // -6 to +6
-                    const randomFracOptions = [0, 0.05, 0.1, 0.25];
+                    const randomFracOptions = [0, 0.05, 0.1, 0.2, 0.25];
                     const randomFrac = randomFracOptions[Math.floor(Math.random() * randomFracOptions.length)];
                     nodeRelativeSpeed = randomInt + randomFrac;
+
+                    const node1 = nodes[0];
+                    if (node1) {
+                        switch (randomFrac) {
+                            case 0:    node1.totalRotations = 1; break;
+                            case 0.05: node1.totalRotations = 20; break;
+                            case 0.1:  node1.totalRotations = 10; break;
+                            case 0.2:  node1.totalRotations = 5; break;
+                            case 0.25: node1.totalRotations = 4; break;
+                            default:   node1.totalRotations = 0; // Default case
+                        }
+                        const totalRotationsInput = document.getElementById(`totalRotations${node1.id}`);
+                        if (totalRotationsInput) {
+                            totalRotationsInput.value = node1.totalRotations;
+                        }
+                    }
                 }
 
                 const newNode = {
