--- a/spiro/index.html
+++ b/spiro/index.html
@@ -45,12 +45,14 @@
             </div>
             <button id="startStopButton">Start Simulation</button>
             <button id="downloadButton" class="hidden">Download Spirograph</button>
+            <button id="generateGifButton" class="hidden">Generate GIF</button>
         </div>
         <div id="simulation-area">
             <canvas id="spirographCanvas"></canvas>
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
