--- a/spiro/index.html
+++ b/spiro/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.js"></script>
+    <script src="js/gif.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
