--- a/spiro/index.html
+++ b/spiro/index.html
@@ -52,7 +52,11 @@
         </div>
     </div>
 
+    <script>console.log("Loading gif.js...");</script>
     <script src="js/gif.js"></script>
+    <script>console.log("gif.js loaded.");</script>
+    <script>console.log("Loading app.js...");</script>
     <script src="js/app.js"></script>
+    <script>console.log("app.js loaded.");</script>
 </body>
 </html>
