--- a/spiro/index.html
+++ b/spiro/index.html
@@ -52,10 +52,7 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.js" crossorigin="anonymous"></script>
-    <script>console.log("gif.js loaded.");</script>
-    <script>console.log("Loading app.js...");</script>
+    <script src="https://unpkg.com/gifshot/dist/gifshot.js"></script>
     <script src="js/app.js"></script>
-    <script>console.log("app.js loaded.");</script>
 </body>
 </html>
