--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <a href="./spiro/" tabindex="-1">
                             <div>
                                 <h2>SpiroGen</h2>
-                                <p><b>SpiroGen v2.5:</b> Create art with up to 4 nodes, pan/zoom, persistent traces of varying width and opacity, Node 1 fixed mode & starting angle (with math support for precision), Total Rotations, PWA support, Memory, and PNG download.</p>
+                                <p><b>SpiroGen v2.6:</b> Create art with up to 4 nodes, pan/zoom, persistent traces of varying width and opacity, Node 1 fixed mode & starting angle (with math support for precision), Total Rotations, PWA support, Memory, and export either GIF or PNG formatted images.</p>
                             </div>
                         </a>
                     </td>
