--- a/spiro/index.html
+++ b/spiro/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <script src="https://unpkg.com/gifshot/dist/gifshot.js"></script>
+    <script src="js/lib/Animated_GIF.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
