--- a/index.html
+++ b/index.html
@@ -148,6 +148,21 @@
                         </a>
                     </td>
                 </tr>
+                <tr class="project-row" onclick="window.location.href='./spiro/';">
+                    <td class="project-image-cell">
+                        <a href="./spiro/" tabindex="-1">
+                            <img src="./images/spiro.png" alt="Spirograph Playground Image">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./spiro/" tabindex="-1">
+                            <div>
+                                <h2>SpiroGen</h2>
+                                <p><b>SpiroGen v2.6:</b> Create art with up to 4 nodes, pan/zoom, persistent traces of varying width and opacity, Node 1 fixed mode & starting angle (with math support for precision), Total Rotations, PWA support, Memory, and export either GIF or PNG formatted images.</p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
                 <tr class="project-row" onclick="window.location.href='./btc/';">
                     <td class="project-image-cell">
                         <a href="./btc/" tabindex="-1">
@@ -163,6 +178,21 @@
                         </a>
                     </td>
                 </tr>
+                <tr class="project-row" onclick="window.location.href='./vbtc/';">
+                    <td class="project-image-cell">
+                        <a href="./vbtc/" tabindex="-1">
+                            <img src="./images/vbtc.png" alt="vBTC - Virtual Bitcoin Trading Simulator Screenshot">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./vbtc/" tabindex="-1">
+                            <div>
+                                <h2>vBTC v1.3</h2>
+                                <p><b>vBTC</b> is a command-line application for simulating Bitcoin trading. It uses a live API to fetch real-time Bitcoin prices and allows users to manage a virtual portfolio with a starting capital of $1000. The application features real-time market data, including 24h high/low, volatility, and a 1-Hour Simple Moving Average (SMA), with a 15-minute cache to optimize API calls. It provides a full transaction ledger, configuration options, and color-coded feedback for an intuitive trading experience.</p><p>Available in a native Go version for cross-platform performance and a PowerShell version for Windows environments.</p><h3>Downloads</h3><p><b>GO Edition:</b> PC [ <a href="../go/vbtc/bin/pc/x86/vbtc.exe">x86</a> / <a href="../go/vbtc/bin/pc/x64/vbtc.exe">x64</a> ] Mac [ <a href="../go/vbtc/bin/mac/amd64/vbtc.app">amd64</a> / <a href="../go/vbtc/bin/mac/arm64/vbtc.app">arm64</a> ] Linux [ <a href="../go/vbtc/bin/linux/x86/vbtc">x86</a> / <a href="../go/vbtc/bin/linux/amd64/vbtc">amd64</a> ]</p><p class="readme-link">↳ <a href="../go/vbtc/README.txt">README</a></p><p><b>PowerShell Edition:</b> [ <a href="../ps/vbtc/vbtc.ps1">ps1</a> / <a href="../ps/vbtc/vbtc.exe">exe</a> ]</p><p class="readme-link">↳ <a href="../ps/vbtc/README.txt">README</a></p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
                 <tr class="project-row" onclick="window.location.href='./gene/';">
                     <td class="project-image-cell">
                         <a href="./gene/" tabindex="-1">
@@ -174,21 +204,6 @@
                             <div>
                                 <h2>GENE</h2>
                                 <p><b>Evolving digital life.</b> Tweak world balance to nudge evolution, see your genomic history.<br><b>Controls:</b> Single Tap = Fullscreen Toggle <br>Double Tap = Play/Pause <br>Triple Tap = Thanos Event <br>Pinch/Wheel = Zoom (Paused) / Cell Scale (Running) <br>Drag (Paused) = Pan View <br>Swipe (Fullscreen, Running): Vertical = Food Density, Horizontal = Sim Speed <br>Keyboard: Space = Play/Pause, Arrows = Speed/Food, T = Thanos</p>
-                            </div>
-                        </a>
-                    </td>
-                </tr>
-                <tr class="project-row" onclick="window.location.href='./spiro/';">
-                    <td class="project-image-cell">
-                        <a href="./spiro/" tabindex="-1">
-                            <img src="./images/spiro.png" alt="Spirograph Playground Image">
-                        </a>
-                    </td>
-                    <td class="project-text-cell">
-                        <a href="./spiro/" tabindex="-1">
-                            <div>
-                                <h2>SpiroGen</h2>
-                                <p><b>SpiroGen v2.6:</b> Create art with up to 4 nodes, pan/zoom, persistent traces of varying width and opacity, Node 1 fixed mode & starting angle (with math support for precision), Total Rotations, PWA support, Memory, and export either GIF or PNG formatted images.</p>
                             </div>
                         </a>
                     </td>
