--- a/btc/index.html
+++ b/btc/index.html
@@ -524,6 +524,7 @@
         <div class="chart-controls">
             <span id="lastUpdatedText" class="last-updated-text"></span>
             <select id="timeframeSelect">
+                <option value="3h">Last 3 Hours</option>
                 <option value="24h" selected>Last 24 Hours</option>
                 <option value="7d">Last 7 Days</option>
                 <option value="1m">Last 1 Month</option>
@@ -1310,7 +1311,10 @@
             let historyStartMs;
 
             switch (timeframe) {
-                case '7d':
+                    case '3h':
+                    historyStartMs = historyEndMs - (3 * 60 * 60 * 1000);
+                    break;
+                    case '7d':
                     historyStartMs = historyEndMs - (7 * 24 * 60 * 60 * 1000);
                     break;
                 case '1m':
@@ -1733,7 +1737,8 @@
             ctx.textAlign = 'center';
             ctx.textBaseline = 'top';
             let xLabelStart = "Start", xLabelMid = "Mid", xLabelEnd = "Now";
-            if (timeframe === '24h') { xLabelStart = '24h ago'; xLabelMid = '12h ago'; }
+            if (timeframe === '3h') { xLabelStart = '3h ago'; xLabelMid = '1.5h ago'; }
+            else if (timeframe === '24h') { xLabelStart = '24h ago'; xLabelMid = '12h ago'; }
             else if (timeframe === '7d') { xLabelStart = '7d ago'; xLabelMid = '~3.5d ago'; }
             else if (timeframe === '1m') { xLabelStart = '1mo ago'; xLabelMid = '~15d ago'; }
             else if (timeframe === '1y') { xLabelStart = '1y ago'; xLabelMid = '~6mo ago'; }
