--- a/vbtc/index.html
+++ b/vbtc/index.html
@@ -132,7 +132,7 @@
                     </td>
                     <td class="project-text-cell">
                         <div>
-                            <h2>vBTC v1.3</h2>
+                            <h2>vBTC v1.4</h2>
                             <p>
                                 <b>vBTC</b> is a command-line application for simulating Bitcoin trading. It uses a live API to fetch real-time Bitcoin prices and allows users to manage a virtual portfolio with a starting capital of $1000.00.
                                 The application features real-time market data, including 24h high/low, volatility, and a 1-Hour Simple Moving Average (SMA), with a 15-minute cache to optimize API calls. It provides a full transaction ledger, configuration options, and color-coded feedback for an intuitive trading experience.
@@ -142,7 +142,7 @@
                             </p>
 
                             <h3>Downloads</h3>
-                            <p><b>GO Edition:</b> PC [ <a href="../go/vbtc/bin/pc/x86/vbtc.exe">x86</a> / <a href="../go/vbtc/bin/pc/x64/vbtc.exe">x64</a> ] Mac [ <a href="../go/vbtc/bin/mac/amd64/vbtc.app">amd64</a> / <a href="../go/vbtc/bin/mac/arm64/vbtc.app">arm64</a> ] Linux [ <a href="../go/vbtc/bin/linux/x86/vbtc">x86</a> / <a href="../go/vbtc/bin/linux/amd64/vbtc">amd64</a> ]</p>
+                            <p><b>GO Edition:</b> PC [ <a href="../go/vbtc/bin/pc/x86/vbtc.exe">x86</a> / <a href="../go/vbtc/bin/pc/x64/vbtc.exe">x64</a> ] Mac [ <a href="../go/vbtc/bin/mac/amd64/vbtc.zip">amd64</a> / <a href="../go/vbtc/bin/mac/arm64/vbtc.zip">arm64</a> ] Linux [ <a href="../go/vbtc/bin/linux/x86/vbtc">x86</a> / <a href="../go/vbtc/bin/linux/amd64/vbtc">amd64</a> ]</p>
                             <p class="readme-link">↳ <a href="../go/vbtc/README.txt">README</a></p>
                             <p><b>PowerShell Edition:</b> [ <a href="../ps/vbtc/vbtc.ps1">ps1</a> / <a href="../ps/vbtc/vbtc.exe">exe</a> ]</p>
                             <p class="readme-link">↳ <a href="../ps/vbtc/README.txt">README</a></p>
