GW Web Launch, rc +Precision

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     </header>
 
     <div class="container">
+        <h2 style="text-align: center; margin-top: 2rem; border-bottom: 1px solid #ccc; padding-bottom: 0.5rem;">Web Applications</h2>
         <table>
             <tbody>
                 <tr class="project-row" onclick="window.location.href='./snake/';">
@@ -178,21 +179,6 @@
                         </a>
                     </td>
                 </tr>
-                <tr class="project-row" onclick="window.location.href='./vbtc/';">
-                    <td class="project-image-cell">
-                        <a href="./vbtc/" tabindex="-1">
-                            <img src="./images/vbtc.png" alt="vBTC - Virtual Bitcoin Trading Simulator Screenshot">
-                        </a>
-                    </td>
-                    <td class="project-text-cell">
-                        <a href="./vbtc/" tabindex="-1">
-                            <div>
-                                <h2>vBTC v1.4</h2>
-                                <p><b>vBTC</b> is a command-line application for simulating Bitcoin trading. It uses a live API to fetch real-time Bitcoin prices and allows users to manage a virtual portfolio with a starting capital of $1000. The application features real-time market data, including 24h high/low, volatility, and a 1-Hour Simple Moving Average (SMA), with a 15-minute cache to optimize API calls. It provides a full transaction ledger, configuration options, and color-coded feedback for an intuitive trading experience.</p>
-                            </div>
-                        </a>
-                    </td>
-                </tr>
                 <tr class="project-row" onclick="window.location.href='./gene/';">
                     <td class="project-image-cell">
                         <a href="./gene/" tabindex="-1">
@@ -234,6 +220,42 @@
                             <div>
                                 <h2>Double Pendulum</h2>
                                 <p><b>Double Pendulum Simulator:</b> Explore chaotic motion with this interactive double pendulum simulator (v0.7). Adjust the lengths, masses, and starting angles of the pendulum bobs. Customize the simulation's background and the pendulum/trace color; the interface, including sliders with large themed knobs, dynamically adapts to your choices. Watch the physics-based simulation in real-time, see the trace path, and download it as an image. This PWA is installable and offers basic offline use.</p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2 style="text-align: center; margin-top: 3rem; border-bottom: 1px solid #ccc; padding-bottom: 0.5rem;">CLI Applications</h2>
+        <table>
+            <tbody>
+                <tr class="project-row" onclick="window.location.href='./vbtc/';">
+                    <td class="project-image-cell">
+                        <a href="./vbtc/" tabindex="-1">
+                            <img src="./images/vbtc.png" alt="vBTC - Virtual Bitcoin Trading Simulator Screenshot">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./vbtc/" tabindex="-1">
+                            <div>
+                                <h2>vBTC v1.4</h2>
+                                <p><b>vBTC</b> is a command-line application for simulating Bitcoin trading. It uses a live API to fetch real-time Bitcoin prices and allows users to manage a virtual portfolio with a starting capital of $1000. The application features real-time market data, including 24h high/low, volatility, and a 1-Hour Simple Moving Average (SMA), with a 15-minute cache to optimize API calls. It provides a full transaction ledger, configuration options, and color-coded feedback for an intuitive trading experience.</p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
+                <tr class="project-row" onclick="window.location.href='./gw/';">
+                    <td class="project-image-cell">
+                        <a href="./gw/" tabindex="-1">
+                            <img src="./images/gw.png" alt="GetWeather CLI Screenshot">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./gw/" tabindex="-1">
+                            <div>
+                                <h2>GetWeather CLI</h2>
+                                <p><b>GetWeather CLI</b> is a command-line utility for retrieving detailed weather information for any specified location. It accepts US zip codes or "City, State" strings and uses the OpenWeatherMap API to provide current conditions, forecasts, and alerts directly in your terminal. It is available as both a PowerShell script and a native Go application.</p>
                             </div>
                         </a>
                     </td>
